<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">Specialty</string>
    <string name="tv_home">首页</string>
    <string name="tv_classify">分类</string>
    <string name="tv_cart">购物车</string>
    <string name="tv_me">我的</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">fragment1</string>
    <string name="hello_blank_fragment1">fragment2</string>
    <string name="hello_blank_fragment2">fragment3</string>
    <string name="hello_blank_fragment3">fragment4</string>
    <string name="title_activity_orcer_details">Orcer_detailsActivity</string>
    <!--首页-->
    <string name="Search">搜索</string>
    <string name="refrech">消息</string>
    <string name="home_center_charge">干货</string>
    <string name="home_bottom_transaction">生鲜</string>
    <string name="home_center"> 资讯 </string>
    <string name="home_center_customerService"> 分类</string>
    <string name="home_hot">热卖商品</string>
    <string name="img">图片</string>
    <string name="home_new">最新上架</string>
    <string name="home_defaule_announce">测试公告</string>
    <!--购物车界面-->
    <string name="cart_top">购物车</string>
    <string name="cart_null">愿望满满，但是车还是空的！</string>
    <string name="cart_buy">再不去抢购，宝贝就要卖光啦～</string>
    <string name="cart_specification">口味：</string>
    <string name="cart_num">数量：</string>
    <string name="cart_plus">+</string>
    <string name="cart_Less">-</string>
    <string name="cart_money">¥</string>
    <string name="cart_all">全选</string>
    <string name="cart_all_money">合计：￥0.0</string>
    <string name="cart_by_all">结算(0)</string>
    <!--用户界面-->
    <string name="user_phone">158****7192</string>
    <string name="user_name">陈彬</string>
    <string name="user_collectionNum">100</string>
    <string name="user_collection">我的收藏</string>
    <string name="user_order">我的订单</string>
    <string name="user_address">收货地址</string>
    <string name="user_problem">问题反馈</string>
    <string name="user_okOrder">查看所有已购买商品</string>
    <string name="user_pendingPayment">待付款</string>
    <string name="user_delivered">待发货</string>
    <string name="user_received">待收货</string>
    <string name="user_evaluated">待评价</string>
    <string name="user_about">关于</string>
    <string name="user_sever">顾客服务</string>
    <string name="user_help">帮助中心</string>
    <string name="user_link">友情链接</string>
    <string name="user_coupon">优惠券</string>
    <string name="feedback">请详细的说明你遇到的问题</string>
    <string name="feedback_button"> 提交</string>
    <string name="about">关于APP的服务条款</string>
    <string name="sever">服务条款</string>
    <string name="privacy">隐私声明</string>
    <string name="sever_name">App服务条款</string>
    <string name="edit_username">更改用户名!</string>
    <string name="edit_hint">请输入新用户名</string>
    <string name="edit_btn">确定</string>
    <!--分类界面-->
    <string name="classify_name">干果</string>
    <string name="classify_peanut">花生</string>
    <string name="classify_potatoes">地瓜</string>
    <string name="classify_meat">猪肉干</string>
    <string name="classify_Shoots">笋干</string>
    <string name="classify_tofu">豆腐干</string>
    <string name="classify_Comprehensive">综合排序</string>
    <string name="classify_sales">销量优先</string>
    <string name="classify_new">最新上架</string>
    <string name="classify_price">价格</string>
    <!--详情界面-->
    <string name="details_name">新疆库尔勒香梨梨子香妃梨</string>
    <string name="details_money">¥ 29.9</string>
    <string name="details_taste">请选择规格</string>
    <string name="details_add_cart">加入购物车</string>
    <string name="details_collection">收藏</string>
    <string name="details_buy">立即购买</string>
    <string name="details_details">商品详情</string>
    <string name="details_specification">产品规格</string>
    <string name="details_evaluation">评价</string>
    <string name="details_product">"    "莱阳梨皮呈黄绿色， 粗糙而有褐色锈斑，果形头粗尾细，萼部凹入，表面上并不美观，但去皮后擎着粗硬的果梗，宛如一支乳白色的雪糕，其肉质细嫩，汁水丰富，甘甜如饴，口感清脆香甜，有独特的风味，是梨中的上品。
    莱阳梨皮呈黄绿色， 粗糙而有褐色锈斑，果形头粗尾细，萼部凹入，表面上并不美观，但去皮后擎着粗硬的果梗，宛如一支乳白色的雪糕，其肉质细嫩，汁水丰富，甘甜如饴，口感清脆香甜，有独特的风味，是梨中的上品。
    莱阳梨皮呈黄绿色， 粗糙而有褐色锈斑，果形头粗尾细，萼部凹入，表面上并不美观，但去皮后擎着粗硬的果梗，宛如一支乳白色的雪糕，其肉质细嫩，汁水丰富，甘甜如饴，口感清脆香甜，有独特的风味，是梨中的上品。</string>
    <string name="details_ingredients">配料表</string>
    <string name="details_storage">存储方法</string>
    <string name="details_shelf">保质期</string>
    <string name="details_packing">包装方式</string>
    <string name="details_specifica">规格</string>
    <string name="details_weight">重量(g):</string>
    <string name="details_stock">库存:</string>
    <string name="details_weight_num">20(g)</string>
    <string name="details_inventory">123456</string>
    <string name="details_tastes">口味:</string>
    <string name="details_spicy">香辣</string>
    <string name="details_Num">1</string>
    <string name="details_unit">件</string>
    <!--收货地址-->
    <string name="address_top">管理收货地址</string>
    <string name="address_no">暂无收货地址～</string>
    <string name="address_add">添加新地址</string>
    <string name="address_save">保存</string>
    <string name="address_receiver">收货人</string>
    <string name="address_phone">联系电话</string>
    <string name="address_address">详细地址</string>
    <string name="address_default">设为默认地址</string>
    <string name="address_receiver_list">收货人：</string>
    <string name="address_phone_list">15892057194</string>
    <string name="address_address_list">深圳市南山区科技园南区R2-B三楼</string>
    <string name="address_edit_list">编辑</string>
    <string name="address_delete_list">删除</string>
    <!--个人中心-->
    <string name="center_avatar">用户头像</string>
    <string name="center_nickname">昵称</string>
    <string name="center_name">夜未央</string>
    <string name="center_Bind_phone">绑定手机</string>
    <string name="center_change_passward">修改密码</string>
    <string name="title_activity_login">login</string>
    <string name="center_password">登录密码</string>
    <string name="center_newpassword">请输入新密码</string>
    <string name="center_confirm_password">确认新密码</string>
    <string name="center_accont">请输入账号</string>
    <string name="center_phone">请输入手机号 </string>
    <string name="center_verification">请输入验证码</string>
    <string name="getitnow">立即获取</string>
    <string name="next">下一步</string>
    <!--登录界面-->
    <string name="log_account">请输入登录账号</string>
    <string name="log_pwd">请输入密码</string>
    <string name="log_log">登录</string>
    <string name="log_forget">忘记密码?</string>
    <string name="logistics_top">物流信息</string>
    <!--查看物流-->
    <string name="logis_trace_info">已发货</string>
    <string name="ligis_time">4-27 12:27</string>
    <string name="title_activity_logistivsitem">Logistivsitem</string>
    <string name="title_activity_classification">Classification</string>
    <string name="title_activity_product_details">product_details</string>
    <string name="title_activity_collection">CollectionActivity</string>
    <string name="title_activity_order">OrderActivity</string>
    <!--订单界面-->
    <string name="order_null">当前没有此类订单</string>
    <string name="order_new">快去下单试试～</string>
    <string name="title_activity_feedback">FeedbackActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_sever">SeverActivity</string>
    <string name="title_activity_edit_name">Edit_nameActivity</string>
    <string name="order_status">等待买家未付款</string>
    <string name="order_total">合计:</string>
    <string name="order_cancel">取消订单</string>
    <string name="order_payment">去付款</string>
    <string name="order_View_Logistics">查看物流</string>
    <string name="order_Confirm_Receipt">确定收货</string>
    <string name="order_evaluate">去评价</string>
    <string name="order_buy_again">再次购买</string>
    <string name="order_num">×1</string>
    <string name="order_receiver">收货人：</string>
    <string name="order_address">收货地址：</string>
    <string name="order_method">发货方式</string>
    <string name="order_delivery">快递：6元</string>
    <string name="order_total_num">记单总件</string>
    <string name="order_select">选择支付方式</string>
    <string name="order_alipay">支付宝</string>
    <string name="order_confirm">确认</string>
    <string name="title_activity_order_detail">OrderDetail</string>
    <string name="order_discount">满减优惠</string>
    <string name="order_deliverys">快递</string>
    <string name="order_actually">实付款（含运费）</string>
    <string name="order_numbering">订单编号:</string>
    <string name="order_transaction">支付交易号:</string>
    <string name="order_create">创建时间:</string>
    <string name="order_payment_time">付款时间:</string>
    <string name="order_carry">完成时间:</string>
    <string name="title_activity_comment">CommentActivity</string>
    <string name="order_comment">宝贝满足你的期待吗？说说它的优点和美中不足的地方吧</string>
    <string name="title_activity_choose_taste">ChooseTasteActivity</string>
    <string name="title_activity_password">PasswordActivity</string>
    <string name="title_activity_forget">ForgetActivity</string>
    <string name="title_activity_verify_phone">VerifyPhoneActivity</string>
    <string name="title_activity_evaluationeadit">evaluationeadit</string>

</resources>
