<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/img"
            android:padding="10dp"
            android:src="@mipmap/user"/>

        <TextView
            android:id="@+id/evaluation_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/user_name"
            android:textSize="@dimen/text_size_m"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">
        <TextView
            android:id="@+id/evaluation_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/details_product"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp">
        <TextView
            android:id="@+id/evaluation_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ligis_time"/>
    </LinearLayout>

</LinearLayout>
