<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/top"
        layout="@layout/top_all"/>

    <LinearLayout
        android:id="@+id/details_scro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@mipmap/likeun"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/details_collection"
            android:textSize="@dimen/text_size_mm"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorAddCart"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/details_add_cart"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_m"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPink"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/details_buy"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_m"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/details_scro"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/top"
        android:fillViewport="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/details_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img"
            android:src="@drawable/fruit"/>

        <TextView
            android:id="@+id/details_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/details_name"
            android:textSize="@dimen/text_size_m"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/details_money"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/text_size_x"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/colorLine"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@mipmap/rarrow"
            android:padding="10dp"
            android:text="@string/details_taste"
            android:textSize="@dimen/text_size_m"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@color/colorLine"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:baselineAligned="false"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/details_details"
                    android:textColor="@color/colorPink"
                    android:textSize="@dimen/text_size_m"/>

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorPink"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_details_specification"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/details_specification"
                    android:textSize="@dimen/text_size_m"/>

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorLogisicsText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_evaluation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/details_evaluation"
                    android:textSize="@dimen/text_size_m"/>

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/colorLogisicsText"/>
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/show_layout_product"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite">
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
