<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite">

    <LinearLayout
        android:id="@+id/cart_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/img"
            android:src="@mipmap/larrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/address_top"
            android:textSize="@dimen/text_size_m"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginRight="10dp"
            android:gravity="end"
            android:padding="5dp"
            android:text="@string/address_save"
            android:textSize="@dimen/text_size_m"/>
    </LinearLayout>

</RelativeLayout>
