<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLine"
    tools:context="com.specialty.administrator.me.PasswordActivity">

    <include
        android:id="@+id/password_top"
        layout="@layout/top_all"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/password_top"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/center_password"
            android:textColor="@color/colorOrder"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/password"
            android:drawablePadding="11dp"
            android:drawableStart="@mipmap/login_pwd"
            android:hint="@string/center_newpassword"
            android:padding="5dp"
            android:textColorHint="@color/colorLogisicsText"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/password"
            android:drawablePadding="11dp"
            android:drawableStart="@mipmap/login_pwd"
            android:hint="@string/center_confirm_password"
            android:padding="5dp"
            android:textColorHint="@color/colorLogisicsText"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_back"
                android:text="@string/order_confirm"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_size_x"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
