<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.specialty.administrator.me.OrderActivity">

    <include
        android:id="@+id/order_top"
        layout="@layout/top_all"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/order_top"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/null_order_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/img"
                android:src="@mipmap/no_order"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_null"
                android:textColor="@color/colorLogisicsText"
                android:textSize="@dimen/text_size_x"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_new"
                android:textColor="@color/colorLogisicsText"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/list_Layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/order_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
